Closes MSONZE-7 Added the modifications to perform the syncronization with LDAP, and CM

--- a/conf/sakai/sakai.properties
+++ b/conf/sakai/sakai.properties
@@ -214,10 +214,10 @@ locales = en_US, en_GB, en_AU, en_NZ, en_ZA, ja_JP, ko_KR, nl_NL, zh_CN, zh_TW, 
 # ########################################################################
 
 # The default skin for sites without a skin setting
-skin.default=udl-docencia
+#skin.default=udl-docencia
 				
 # the path to the skin files
-skin.repo=/library/skin
+#skin.repo=/library/skin
 
 # Disable list of appearance/icon with "edit site information" for course sites. 
 # Set to true to display only default appearance.
@@ -230,7 +230,7 @@ iconNames.count=0
 # ########################################################################
 
 # Specifies the skin prefix
-portal.neoprefix=neo-
+#portal.neoprefix=neo-
 
 # Controls the portal chat feature
 portal.neochat=true 
@@ -890,7 +890,7 @@ siteManage.validateNewUsers=true
 # ConcurrentHashMap. (3 * 250)
 
 portalchat.heartbeatmap.size= 750 
-portalchat.cluster.channel=portal.neochat
+portalchat.cluster.channel=portal.morpheus
 portal.chat.video=true
 portal.chat.video.servers=stun:stun.l.google.com:19302,turn: turnclient@cv.udl.cat:numbserver@numb.viagenie.ca,stun:23.21.150.121
 portal.chat.video.timeout=30
@@ -927,24 +927,12 @@ wiki.notification = false
 #wiki.trackreads = true
 
 #JLDAP properties
-ldapHost@org.sakaiproject.user.api.UserDirectoryProvider.provider1=dir3.udl.net
-ldapPort@org.sakaiproject.user.api.UserDirectoryProvider.provider1=389
-searchScope@org.sakaiproject.user.api.UserDirectoryProvider.provider1=2
-basePath@org.sakaiproject.user.api.UserDirectoryProvider.provider1=dc=udl,dc=es
-wrapFilter@org.sakaiproject.user.api.UserDirectoryProvider.provider1=(objectclass=posixAccount)
-
-ldapHost@org.sakaiproject.user.api.UserDirectoryProvider.provider2=dir2.udl.net
-ldapPort@org.sakaiproject.user.api.UserDirectoryProvider.provider2=389
-searchScope@org.sakaiproject.user.api.UserDirectoryProvider.provider2=2
-basePath@org.sakaiproject.user.api.UserDirectoryProvider.provider2=dc=udl,dc=es
-wrapFilter@org.sakaiproject.user.api.UserDirectoryProvider.provider2=(objectclass=posixAccount)
-
-ldapHost@org.sakaiproject.user.api.UserDirectoryProvider.provider3=dir1.udl.net
-searchScope@org.sakaiproject.user.api.UserDirectoryProvider.provider3=2
-ldapPort@org.sakaiproject.user.api.UserDirectoryProvider.provider3=389
-basePath@org.sakaiproject.user.api.UserDirectoryProvider.provider3=dc=udl,dc=es
-wrapFilter@org.sakaiproject.user.api.UserDirectoryProvider.provider3=(objectclass=posixAccount)
-
+#JLDAP properties
+ldapHost@org.sakaiproject.user.api.UserDirectoryProvider=dir3.udl.net
+ldapPort@org.sakaiproject.user.api.UserDirectoryProvider=389
+searchScope@org.sakaiproject.user.api.UserDirectoryProvider=2
+basePath@org.sakaiproject.user.api.UserDirectoryProvider=dc=udl,dc=es
+wrapFilter@org.sakaiproject.user.api.UserDirectoryProvider=(objectclass=posixAccount)
 
 priorityTypeList@org.sakaiproject.user.api.UserDirectoryProvider.parent=personUdL,aluDOCTORAT,aluICE 
 
