--- a/src/sakai/providers/component/pom.xml
+++ b/src/sakai/providers/component/pom.xml
@@ -30,6 +30,10 @@
 			<artifactId>sakai-jldap-provider</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>cat.udl.asic.provider</groupId>
+			<artifactId>sakai-udl-provider</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.sakaiproject</groupId>
 			<artifactId>sakai-kerberos-provider</artifactId>
 		</dependency>
