--- a/src/sakai/providers/jldap/pom.xml
+++ b/src/sakai/providers/jldap/pom.xml
@@ -57,6 +57,11 @@
       <version>1.1.0</version>
       <scope>test</scope>
     </dependency>
+         <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <scope>compile</scope>
+    </dependency>
     <dependency>
       <groupId>cglib</groupId>
       <artifactId>cglib-full</artifactId>
