MSONZE-21 Canvis a la configuració per que els espais s'ordenin al nostre gust

--- a/conf/sakai/sakai.properties
+++ b/conf/sakai/sakai.properties
@@ -159,21 +159,21 @@ availabilityChecksEnabled@org.sakaiproject.content.api.ContentHostingService=tru
 prioritySortEnabled@org.sakaiproject.content.api.ContentHostingService=true
 
 # upload limit per request, in MBs
-content.upload.max=20
+content.upload.max=200
 
 # Enable zip content handling (affects resources), off by default
 # Allows users to upload zip files and have them be expanded into the content (resources tool) and 
 # allows downloading a zip file of a folder or folders from Sakai content (through resources tool)
-content.zip.enabled=true
+content.zip.enabled=false
 
 # Set the limit of the max number of files to extract from a zip archive
 content.zip.expand.maxfiles=500
 
 # Enable zip file expansion into content (affects resources), off by default
-content.zip.expand.enabled=true
+content.zip.expand.enabled=false
 
 # Enable content compression into zip file (affects resources), off by default
-content.zip.compress.enabled=true
+content.zip.compress.enabled=false
 
 # NEW setting
 # Defaults to 0 (unlimited storage/no quota)
@@ -182,14 +182,14 @@ content.quota=1048576
 
 # Allows the all sites quota to be overridden by site type (e.g. "project", "course", "workspace") - SAK-8060
 # Defaults to the all sites quota
-content.quota.course=2097152
-content.quota.projectedocent=2097152
+content.quota.course=5242880
+content.quota.projectedocent=5242880
 content.quota.project=1048576
 content.quota.intranet=1048576
 
-content.quota.personalUdL=1048576
+content.quota.personalUdL=5242880
 content.quota.personalExtern=1048576
-content.quota.alumneUdL=524288
+content.quota.alumneUdL=1048576
 
 
 # Set the dropbox quota for all sites/dropboxes
@@ -254,40 +254,39 @@ portal.term.order.1=2016-17
 portal.term.order.2=Academics Projects
 portal.term.order.3=Projectes docents
 portal.term.order.4=Proyectos docentes
-portal.term.order.5=2015-16
-portal.term.order.6=2014-15
-portal.term.order.7=2013-14
-portal.term.order.8=2012-13
-portal.term.order.9=2011-12
-portal.term.order.10=2010-11
-portal.term.order.11=Other terms
-portal.term.order.12=Altres anys
-portal.term.order.13=Otros años
-portal.term.order.14=Projects
-portal.term.order.15=Projectes
-portal.term.order.16=Proyectos
-portal.term.order.17=Comunication
-portal.term.order.18=Comunicaci\uFFFDn
-portal.term.order.19=Comunicaci\uFFFD
-portal.term.order.20=Comunity
-portal.term.order.21=Comunidad
-portal.term.order.22=Comunitat
-portal.term.order.23=Intranet
-portal.term.order.24=Academic record
-portal.term.order.25=Expediente
-portal.term.order.26=Expedient
-portal.term.order.27=Espais d'utilitat
-portal.term.order.28=Espacios de utilidad
-portal.term.order.29=Utility sites
+portal.term.order.5=Comunication
+portal.term.order.6=Comunicaci\u00f3n
+portal.term.order.7=Comunicaci\u00f3
+portal.term.order.8=Doctorat
+portal.term.order.9=Doctorado
+portal.term.order.10=Doctorate
+portal.term.order.11=2015-16
+portal.term.order.12=2014-15
+portal.term.order.13=2013-14
+portal.term.order.14=2012-13
+portal.term.order.15=2011-12
+portal.term.order.16=2010-11
+portal.term.order.17=Projects
+portal.term.order.18=Projectes
+portal.term.order.19=Proyectos
+portal.term.order.20=Intranet
+portal.term.order.21=Comunity
+portal.term.order.22=Comunidad
+portal.term.order.23=Comunitat
+portal.term.order.24=Espais d'utilitat
+portal.term.order.25=Espacios de utilidad
+portal.term.order.26=Utility sites
+portal.term.order.27=Other terms
+portal.term.order.28=Altres anys
+portal.term.order.29=Otros a\u00f1os
 portal.term.order.30=Other
 portal.term.order.31=Otros 
 portal.term.order.32=Altres 
-portal.term.order.33=Doc\uFFFDncia no reglada
+portal.term.order.33=Doc\u00e8ncia no reglada
 portal.term.order.34=Docencia no reglada
 portal.term.order.35=Unregulated Courses
-portal.term.order.36=Doctorat
-portal.term.order.37=Doctorado
-portal.term.order.38=Doctorate
+
+
 
 
 portal.term.visibleTerms = 2016-17,2015-16,9999-99
