MSONZE-37 Canviada la url de ajuda extra a site-manage

--- a/src/sakai/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/src/sakai/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -1290,7 +1290,7 @@ sitedicla.copy_message             = You can choose to re-use (copy) materials f
 sitedicla.copybtn                  = Copy Materials
 sitedicla.copying                  = Copy this existing material...
 sitedicla.edit_roster              = Edit Roster Access for
-sitedicla.edit_roster_announcement = The latest version of campus virtual allows a better site management of your teaching sites (in wich you have administration rights) and consequently you can select the student groups to have access to the site. You can see a few use cases in which this group management has sense in this help <a href="/cvhelp/app/htmls/gestioGrupsCV.html" target="_blank">section</a>.
+sitedicla.edit_roster_announcement = The latest version of campus virtual allows a better site management of your teaching sites (in wich you have administration rights) and consequently you can select the student groups to have access to the site. You can see a few use cases in which this group management has sense in this help <a href="https://cvcms.udl.cat/tools/add-a-new-group-to-a-space" target="_blank">section</a>.
 sitedicla.file                     = File
 sitedicla.import                   = Import
 sitedicla.import_materials         = Import Materials From Archive File
