MSONZE-29 Changed the URL configuration address.

--- a/conf/sakai/sakai.properties
+++ b/conf/sakai/sakai.properties
@@ -9,29 +9,7 @@ serverName=TOKEN-SERVER-NAME
 
 ui.institution = Universitat de Lleida
 ui.service = Campus Virtual UdL
-
-### Paràmetres Web Ajuda
-urlAjuda=https://cvcms.udl.cat/
-
-urlDetall=campus-detall
-urlEines=eines
-urlEspais=els-espais
-
-traduccionsAjuda=ca,es,en
-
-participant.roles=Student,access,convidat,Estudiant,Erasmus,Participant
-tools.noProfile=sakai.datacollector.biblioteca,sakai.iframe.expedient,sakai.iframe.actes,sakai.basiclti,sakai.preferences,sakai.profile2,sakai.resetpass,sakai.singleuser,sakai.iframe.site,sakai.directori
-
-sakai-summary-calendar=sakai-schedule
-sakai-synoptic-messagecenter=sakai-messages
-sakai-synoptic-announcement=sakai-announcements
-sakai-synoptic-chat=sakai-chat
-sakai-iframe-myworkspace=myworkspace
-sakai-iframe-intranet=intranet
-sakai-directori=intranet
-sakai-iframe-site=inici
-
-
+ 
 ### Informació peu ####
 bottomnav.count = 4
 bottomnav.1 = <a href="http:/www.udl.cat">UdL</a>
@@ -49,7 +27,10 @@ intranet.info.url = /access/content/public/RecursosGateway/Intranet.html
 expedient.info.url = /portal/tool/4b39eada-ccf2-4ec7-9d48-0bc174dad341
 actes.info.url = https://automat.udl.cat/actes/inicio.jsp
 
-# Powered by assertion placed at the bottom of the pocrtal.
+### URL de l'espai d'ajuda ###
+help.redirect.external.webapp=https://cvcms.udl.cat/ca/
+
+# Powered by assertion placed at the bottom of the portal.
 powered.url.count=1
 powered.url.1=http://sakaiproject.org
 powered.img.count=1
