MSONZE-38 Some tools were showing in the incorrect site types

--- a/conf/sakai/sakai.properties
+++ b/conf/sakai/sakai.properties
@@ -779,12 +779,11 @@ wsetup.home.toolids.3=sakai.summary.calendar
 wsetup.home.toolids.4=sakai.synoptic.messagecenter
 wsetup.home.toolids.5=sakai.synoptic.chat
 
-wsetup.home.toolids.course.count=5
-wsetup.home.toolids.course.1=sakai.iframe.site
-wsetup.home.toolids.course.2=sakai.synoptic.announcement
+wsetup.home.toolids.course.count=4
+wsetup.home.toolids.course.1=sakai.synoptic.announcement
+wsetup.home.toolids.course.2=sakai.synoptic.messagecenter
 wsetup.home.toolids.course.3=sakai.summary.calendar
-wsetup.home.toolids.course.4=sakai.synoptic.messagecenter
-wsetup.home.toolids.course.5=sakai.synoptic.chat
+wsetup.home.toolids.course.4=sakai.synoptic.chat
 
 # Worksite setup... ???
 titleEditableSiteType.count=3
@@ -1056,9 +1055,6 @@ tool.categories.sakai.resources=course,comunicacio,project,projectedocent,alumne
 tool.categories.sakai.messages=course,comunicacio,project,projectedocent 
 tool.categories.sakai.iframe=course,comunicacio,project,projectedocent,alumneUdL,alumneExtern,personalUdL,personalExtern
 tool.categories.sakai.iframe.site=course,comunicacio,project,projectedocent
-tool.categories.sakai.synoptic.chat=course,comunicacio,project,projectedocent
-tool.categories.sakai.synoptic.discussion=course,comunicacio,project,projectedocent
-tool.categories.sakai.synoptic.announcement=course,comunicacio,project,projectedocent
 tool.categories.sakai.schedule=course,comunicacio,project,projectedocent,alumneUdL,alumneExtern,personalUdL,personalExtern
 tool.categories.sakai.forums=course,comunicacio,project,projectedocent
 tool.categories.sakai.mailbox=course,project,projectedocent
@@ -1068,11 +1064,11 @@ tool.categories.sakai.assignment=course,project,projectedocent
 tool.categories.sakai.assignment.grades=course,project,projectedocent
 tool.categories.sakai.samigo=course,project,projectedocent
 tool.categories.sakai.gradebook.tool=course,project,projectedocent
+tool.categories.sakai.gradebookng=course,project,projectedocent
 tool.categories.sakai.dropbox=course,project,projectedocent
 tool.categories.sakai.chat=course,comunicacio,project,projectedocent
 tool.categories.sakai.rwiki=course,comunicacio,project,projectedocent,alumneUdL,alumneExtern,personalUdL,personalExtern
 tool.categories.sakai.news=course,comunicacio,project,projectedocent,alumneUdL,alumneExtern,personalUdL,personalExtern
-tool.categories.sakai.presentation=course,project,projectedocent
 tool.categories.sakai.signup=course,comunicacio,project,projectedocent
 tool.categories.sakai.sitestats=course,comunicacio,project,projectedocent
 tool.categories.sakai.iframe.intranet=personalUdL
@@ -1087,7 +1083,9 @@ tool.categories.sakai.preferences=alumneUdL,alumneExtern,personalUdL,personalExt
 tool.categories.sakai.membership=alumneUdL,alumneExtern,personalUdL,personalExtern
 tool.categories.sakai.profile2=alumneUdL,personalUdL
 tool.categories.sakai.bbb=course,projectedocent
-
+tool.categories.sakai.feedback=
+tool.categories.sakai.datacollector=
+tool.categories.sakai.datacollector.biblioteca=course
 
 
 # enable soft site deletions when a site is deleted normally
