Error in the children definition of bbb folder in external's tool project

--- a/src/external/pom.xml
+++ b/src/external/pom.xml
@@ -14,7 +14,7 @@
     <packaging>pom</packaging>
 	
 	<modules>
-		<module>bbb</module>
+		<module>bbb-tool</module>
 		<module>umusync</module>
 	</modules>    
     
