--- a/conf/sakai/sakai.properties
+++ b/conf/sakai/sakai.properties
@@ -1193,4 +1193,5 @@ driverClassName@es.udl.asic.api.app.directori.DbDataSource1=oracle.jdbc.driver.O
 url@es.udl.asic.api.app.directori.DbDataSource1=TOKEN-DIR-DBURL
 vendor@es.udl.asic.api.app.directori.SqlService.Service1=oracle
 
-
+# GRADEBOOK
+gradebook.standard.export.default.fields=usereid,dni,sortname,coursegrade
