Treiem el portal chat. MSONZE-42

--- a/conf/sakai/sakai.properties
+++ b/conf/sakai/sakai.properties
@@ -214,7 +214,7 @@ iconNames.count=0
 #portal.neoprefix=neo-
 
 # Controls the portal chat feature
-portal.neochat=true 
+portal.neochat=false
 
 # Controls whether or not an individual user's profile image will appear in the portal chat
 portal.neoavatar=true
