--- a/src/sakai/announcement/announcement-tool/tool/pom.xml
+++ b/src/sakai/announcement/announcement-tool/tool/pom.xml
@@ -80,6 +80,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.sakaiproject.edu-services.course-management</groupId>
+            <artifactId>coursemanagement-api</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
