MSONZE-31 Ficada l'eina de iframe en el home

--- a/conf/sakai/sakai.properties
+++ b/conf/sakai/sakai.properties
@@ -731,11 +731,19 @@ wsetup.home.toolids.3=sakai.summary.calendar
 wsetup.home.toolids.4=sakai.synoptic.messagecenter
 wsetup.home.toolids.5=sakai.synoptic.chat
 
-wsetup.home.toolids.course.count=4
-wsetup.home.toolids.course.1=sakai.synoptic.announcement
-wsetup.home.toolids.course.2=sakai.synoptic.messagecenter
-wsetup.home.toolids.course.3=sakai.summary.calendar
-wsetup.home.toolids.course.4=sakai.synoptic.chat
+wsetup.home.toolids.course.count=5
+wsetup.home.toolids.course.1=sakai.iframe.site
+wsetup.home.toolids.course.2=sakai.synoptic.announcement
+wsetup.home.toolids.course.3=sakai.synoptic.messagecenter
+wsetup.home.toolids.course.4=sakai.summary.calendar
+wsetup.home.toolids.course.5=sakai.synoptic.chat
+
+wsetup.home.toolids.projectedocent.count=5
+wsetup.home.toolids.projectedocent.1=sakai.iframe.site
+wsetup.home.toolids.projectedocent.2=sakai.synoptic.announcement
+wsetup.home.toolids.projectedocent.3=sakai.synoptic.messagecenter
+wsetup.home.toolids.projectedocent.4=sakai.summary.calendar
+wsetup.home.toolids.projectedocent.5=sakai.synoptic.chat
 
 # SAK-20923 - Option to disable authoirzer (and email for authorizer) when creating a new site
 wsetup.requireAuthorizer=false
