MSONZE-20 Fiquem el boto de login per que es vegi a la landing page

--- a/conf/sakai/sakai.properties
+++ b/conf/sakai/sakai.properties
@@ -54,7 +54,7 @@ gatewaySiteId=!gateway-ca
 # LOGIN/LOGOUT
 # ########################################################################
 loggedOutUrl=TOKEN-SERVER-LOGOUTURL
-top.login=true
+top.login=false
 container.login=false
 xlogin.enabled=false
 xlogin.text=Entra
