--- a/conf/sakai/sakai.properties
+++ b/conf/sakai/sakai.properties
@@ -185,6 +185,7 @@ content.quota.alumneUdL=5242880
 # ########################################################################
 # SKINS
 # ########################################################################
+skin.default=morpheus-udl
 
 # Disable list of appearance/icon with "edit site information" for course sites. 
 # Set to true to display only default appearance.
