MSONZE-49 - Deixar marcada la casella de afegeix al calendari al crear activitats i tests.
Deixar marcada la casella de afegeix al calendari al crear activitats i
tests.

--- a/conf/sakai/sakai.properties
+++ b/conf/sakai/sakai.properties
@@ -433,6 +433,7 @@ assignment.instructor.notifications.default=none
 assignment.usePeerAssessment=true
 assignment.useContentReview=true
 assignment.grading.decimals=2
+assignment.due.date.checked=true
 
 # BASICLTI PROVIDER
 # Enable the Provider
