MSU-2 Actualitzar entorn de desenvolupament (#40)
* MSU-2 Actualitzar config d'AntiSamy

* MSU-2 - Consider noreferrer attribute in some links

Consider noreferrer attribute in some links

* MSU-2 - Links not being cleaned when noopener is deleted

MSU-2 - Links not being cleaned when noopener is deleted

* MSU-2 - collectionId validation

collectionId validation

--- a/src/sakai/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
+++ b/src/sakai/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
@@ -906,6 +906,11 @@
 # DEFAULT: true
 # content.cleaner.add.blank.target=false
 
+# Configure the value of the "rel" attribute of anchor tags when using target="_blank"
+# See KNL-1524
+# DEFAULT: noopener
+# content.cleaner.referrer-policy=noopener noreferrer
+
 # Force the user of a lower security profile for content processing and scanning,
 # if this is not overridden then high security settings are used.
 # The standard high and low files are located in "kernel/sakai-kernel-impl/src/main/resources/antisamy/"
