MSU-5 Alguns canvis per canviar la disposició dels elements de la pàgina d'inici de sakai en espais tipus curs

--- a/conf/sakai/sakai.properties
+++ b/conf/sakai/sakai.properties
@@ -742,19 +742,17 @@ wsetup.disable.unjoin.6=intranet
 
 		
 # Auto-add synoptic tools to Home (SAK-16747) for default and course sites
-wsetup.home.toolids.count=5
-wsetup.home.toolids.1=sakai.iframe.site
-wsetup.home.toolids.2=sakai.synoptic.announcement
+wsetup.home.toolids.count=4
+wsetup.home.toolids.1=sakai.synoptic.announcement
+wsetup.home.toolids.2=sakai.synoptic.messagecenter
 wsetup.home.toolids.3=sakai.summary.calendar
-wsetup.home.toolids.4=sakai.synoptic.messagecenter
-wsetup.home.toolids.5=sakai.synoptic.chat
+wsetup.home.toolids.4=sakai.synoptic.chat
 
-wsetup.home.toolids.course.count=5
-wsetup.home.toolids.course.1=sakai.iframe.site
-wsetup.home.toolids.course.2=sakai.synoptic.announcement
-wsetup.home.toolids.course.3=sakai.synoptic.messagecenter
-wsetup.home.toolids.course.4=sakai.summary.calendar
-wsetup.home.toolids.course.5=sakai.synoptic.chat
+wsetup.home.toolids.course.count=4
+wsetup.home.toolids.course.1=sakai.synoptic.announcement:0,0
+wsetup.home.toolids.course.2=sakai.synoptic.messagecenter:0,1
+wsetup.home.toolids.course.3=sakai.summary.calendar:1,1
+wsetup.home.toolids.course.4=sakai.synoptic.chat:1,0
 
 wsetup.home.toolids.projectedocent.count=5
 wsetup.home.toolids.projectedocent.1=sakai.iframe.site
