MSU-8 Afegir a la barra d'eina un botó nou que porti a l'apartat de configurar noves eines dins de l'espai

--- a/conf/sakai/sakai.properties
+++ b/conf/sakai/sakai.properties
@@ -1160,3 +1160,6 @@ startScheduler@org.sakaiproject.api.app.scheduler.SchedulerManager=TOKEN-STARTSC
 urkund.address=TOKEN-URKUND-ADDRESS
 urkund.username=TOKEN-URKUND-USERNAME
 urkund.password=TOKEN-URKUND-PASSWORD
+
+# Afegir el botó "Afegeix altres eines" a la barra d'eines
+portal.experimental.addmoretools=true
