--- a/src/sakai/portal/portal-impl/impl/src/bundle/sitenav.properties
+++ b/src/sakai/portal/portal-impl/impl/src/bundle/sitenav.properties
@@ -50,7 +50,7 @@ sit_edit = Edit
 sit_reset = Tool Home
 sit_unpublished = Unpublished Site
 sit_publish_now = (Publish Now)
-sit_addmoretools = Add Tool
+sit_addmoretools = Add other tools
 sit_allsites = View All Sites
 sit_alltools = Go to the site to view all
 sit_newsite = Create New Site
