--- a/src/sakai/content/content-bundles/resources/content.properties
+++ b/src/sakai/content/content-bundles/resources/content.properties
@@ -52,7 +52,7 @@ access.site1	= Visible to entire site
 access.group	= Select group(s)
 access.group1	= Visible to select groups: {0}
 access.group.missing	= Missing group(s)
-access.dropbox	= Dropbox
+access.dropbox	= Shared Space
 access.dropbox1	= Visible to instructor and student
 
 # Definitions for roles based on their ids. .anon is the roleid for pubview / public access.
@@ -258,7 +258,7 @@ gen.created     = Created By
 gen.created1    = Created By
 gen.creatime    = Creation Time
 gen.description = Description
-gen.drop        = Drop Box
+gen.drop        = Shared Space
 gen.email1      = Email Notification
 gen.email2      = High - All participants
 gen.email3      = Low - Not received by those who have opted out
@@ -331,7 +331,7 @@ list.sPerm    = Permissions
 list.select   = Check All
 list.show     = Show other sites
 list.site     = Site Resources
-list.site.dropbox   = List of drop boxes
+list.site.dropbox   = List of shared spaces
 list.toobig   = This collection is too big to expand.
 list.unselect = Uncheck All
 list.ame	  = Actions menu end
@@ -453,7 +453,7 @@ sh.close        = Close this folder
 sh.closed       = Closed folder
 sh.copied       = copied - paste?
 sh.cut          = cut - paste?
-sh.drop         = drop box
+sh.drop         = shared space
 sh.get          = Get information on this item
 sh.go           = Go to this folder
 sh.inf          = Information on this collection
@@ -485,7 +485,7 @@ sh.sorttitas    = Sort by title ascending
 sh.sorttitdesc  = Sort by title descending
 sh.unsel        = Uncheck all
 
-dropbox_highlight=Highlight (<em class="recentItemInstruction">&nbsp;</em>) individual dropboxes with recent changes:
+dropbox_highlight=Highlight (<em class="recentItemInstruction">&nbsp;</em>) individual shared spaces with recent changes:
 sh.1day = 1 day
 sh.2day = 2 days
 sh.3day = 3 days
