--- a/src/sakai/assignment/assignment-bundles/resources/assignment.properties
+++ b/src/sakai/assignment/assignment-bundles/resources/assignment.properties
@@ -238,8 +238,8 @@ gen.thearecur1    = There are currently no assignments at this location.
 gen.thearecur2    = There are currently no submissions at this location.
 gen.theassall4    = This assignment allows submissions using both the text box below and attached documents. Type your submission in the box below and/or use the Browse button or the "select files" button to include other documents. <b>Save frequently while working</b>.
 gen.theassall6    = This assignment allows submissions using the text box below only. Type in your submission. <b>Save frequently while working</b>.
-gen.yoursubwill   = Your submission will be sent to {0} to be electronically reviewed for plagiarism.
-gen.onlythefoll   = Only the following file types will be accepted: {0}
+gen.yoursubwill   = Your submission will be sent to a plagiarism tool to be reviewed.
+gen.onlythefoll   = File types accepted: {0}
 gen.theassinf     = The assignment info
 gen.title         = Title
 gen.view2         = View
@@ -693,11 +693,11 @@ downloadall.note=NOTICE: If you switch between languages in your preferences, fo
 uploadall.folders.yes=Save submissions in separate user folders
 uploadall.folders.no=Save all selected download options in one folder (This CANNOT be loaded back into Assignments)
 
-review.use = Use {0}
+review.use = Use the tool.
 review.switch.ne.1 = {0} is not available for non-electronic submissions.
 review.switch.ne.2 = {0} is not available for non-electronic submissions. "Use Turnitin" has been deselected below.
-review.allow = Allow students to view report
-review.report = Report
+review.allow = Allow students to view the results
+review.report = Plagiarism detection report
 review.report.expand = Expand reports
 review.report.collapse = Collapse reports
 review.reports = reports
@@ -727,9 +727,9 @@ gen.sorbyreview = Sort by review
 gen.rev = TurnItIn
 review.notavail = Not available yet
 review.viewreport = View Report
-review.title = {0} Plagiarism Service
+review.title = Plagiarism checker tool
 review.noreport = no report
-review.contentReviewIndicator=Originality of submissions will be verified by {0}.
+review.contentReviewIndicator=The plagiarism tool will verify the originality of the submission files.
 
 ## notification email content
 noti.subject.label=Subject:
