Pujo els 2 commits corresponents al job de correcció de favorits (#53)
* MSU-15 Job per afegir SEEN_SITES a les preferències

* MSU-15 Job per afegir SEEN_SITES a les preferències (afegim línia al log4j)

--- a/conf/tomcat/conf/log4j.properties
+++ b/conf/tomcat/conf/log4j.properties
@@ -18,3 +18,4 @@ log4j.logger.cat.udl.asic.jobs.notificaGrupsNous=INFO,DB
 log4j.logger.cat.udl.asic.jobs.desconnexioCM=INFO,DB
 log4j.logger.cat.udl.asic.jobs.EnviaNotificacionsAppMobil=INFO,DB
 log4j.logger.cat.udl.asic.jobs.deshabilitaGenerics=INFO,DB
+log4j.logger.cat.udl.asic.jobs.correccioFavorits=INFO,DB
