MSU-18 Afegit gradebook NG com eina de gradebook per defecte

--- a/conf/sakai/sakai.properties
+++ b/conf/sakai/sakai.properties
@@ -1029,8 +1029,8 @@ tool.categories.sakai.lessonbuildertool=course,comunicacio,project,projectedocen
 tool.categories.sakai.assignment=course,project,projectedocent
 tool.categories.sakai.assignment.grades=course,project,projectedocent
 tool.categories.sakai.samigo=course,project,projectedocent
-tool.categories.sakai.gradebook.tool=course,project,projectedocent
-tool.categories.sakai.gradebookng=
+#tool.categories.sakai.gradebook.tool=course,project,projectedocent
+tool.categories.sakai.gradebookng=course,project,projectedocent
 tool.categories.sakai.dropbox=course,project,projectedocent
 tool.categories.sakai.chat=course,comunicacio,project,projectedocent
 tool.categories.sakai.rwiki=course,comunicacio,project,projectedocent,alumneUdL,alumneExtern,personalUdL,personalExtern
