--- a/src/sakai/assignment/assignment-bundles/resources/assignment.properties
+++ b/src/sakai/assignment/assignment-bundles/resources/assignment.properties
@@ -176,8 +176,9 @@ content_review.error.SUBMISSION_ERROR_RETRY_CODE          = An error occurred su
 content_review.error.SUBMISSION_ERROR_RETRY_EXCEEDED_CODE = All attempts to submit this attachment for originality review failed. Limit on submission attempts reached.
 content_review.error.SUBMISSION_ERROR_USER_DETAILS_CODE   = An error occurred while submitting this attachment to the originality checking service. The user details are incomplete or invalid.
 content_review.error.createAssignment                     = An error with {0} has occurred while creating this assignment. {1} has saved the assignment in draft mode. Please try posting this assignment again later. {2}
-content_review.note                                       = <div><br /><em>NOTE:</em><ul><li>When submitting attachments, students should only use these file types (WARNING: Files with other types will NOT be attached): {0}.</li> <li>Students should always save files with the appropriate extension.</li> </ul></div>
+content_review.note                                       = <div><br /><em>NOTE:</em><ul><li>When submitting attachments, students should only use these file types (WARNING: Files with other types will NOT be attached): {0}.</li> <li>Students should always save files with the appropriate extension.</li>{1}</ul></div>
 content_review.pending.info                               = This attachment has been submitted and is pending review.
+plagiarismFileSize                                        = <li>Maximum upload limit: {0}Mb per file.</li>
 
 date.allpurpose.releasedate = release date of All Purpose item
 date.allpurpose.retractdate = retract date of All Purpose item
